[gd_scene load_steps=49 format=3 uid="uid://1bqybepbj03k"]

[ext_resource type="Script" path="res://enemies/enemy/enemy.gd" id="1_6rl68"]
[ext_resource type="Texture2D" uid="uid://cl0cbff7uhhca" path="res://enemies/enemy/br/aaa.sprites/d0/Image0002.tres" id="2_0rl5t"]
[ext_resource type="Texture2D" uid="uid://cyduurr00vqkj" path="res://enemies/enemy/br/aaa.sprites/d0/Image0022.tres" id="2_cenx0"]
[ext_resource type="Texture2D" uid="uid://ccdeevd37gi7j" path="res://enemies/enemy/br/aaa.sprites/d0/Image0023.tres" id="3_4to6e"]
[ext_resource type="Texture2D" uid="uid://d32xo55l4uvy7" path="res://enemies/enemy/br/aaa.sprites/d0/Image0003.tres" id="3_wwuf5"]
[ext_resource type="PackedScene" uid="uid://cre1uon7pnve1" path="res://ui/entity_hud/entity_hud.tscn" id="3_ykuos"]
[ext_resource type="Texture2D" uid="uid://qhc6o2v450i8" path="res://enemies/enemy/br/aaa.sprites/d0/Image0004.tres" id="4_v7pt8"]
[ext_resource type="Texture2D" uid="uid://cuqhcp6yuijrg" path="res://enemies/enemy/br/aaa.sprites/d0/Image0024.tres" id="4_vix3w"]
[ext_resource type="Texture2D" uid="uid://bdyphj7mxehps" path="res://enemies/enemy/br/aaa.sprites/d0/Image0005.tres" id="5_g4huu"]
[ext_resource type="Texture2D" uid="uid://bsp3p5eynkfby" path="res://enemies/enemy/br/aaa.sprites/d0/Image0025.tres" id="5_v7kgt"]
[ext_resource type="Texture2D" uid="uid://dgakx0oenjtj3" path="res://enemies/enemy/br/aaa.sprites/d0/Image0026.tres" id="6_2v5ts"]
[ext_resource type="Texture2D" uid="uid://57ysbvtu2vpo" path="res://enemies/enemy/br/aaa.sprites/d0/Image0006.tres" id="6_83bay"]
[ext_resource type="Texture2D" uid="uid://bu1sf66d8ntqx" path="res://enemies/enemy/br/aaa.sprites/d0/Image0007.tres" id="7_nel8d"]
[ext_resource type="Texture2D" uid="uid://cce05yyu15d4d" path="res://enemies/enemy/br/aaa.sprites/d0/Image0027.tres" id="7_xqp7e"]
[ext_resource type="Texture2D" uid="uid://duck3qbukv5aw" path="res://enemies/enemy/br/aaa.sprites/d0/Image0008.tres" id="8_a1u4f"]
[ext_resource type="Texture2D" uid="uid://blwus0ltspb32" path="res://enemies/enemy/br/aaa.sprites/d0/Image0028.tres" id="8_wmwmy"]
[ext_resource type="Texture2D" uid="uid://co0rl7d23l3ff" path="res://enemies/enemy/br/aaa.sprites/d0/Image0009.tres" id="9_7em8a"]
[ext_resource type="Texture2D" uid="uid://dmuj0sc70q5lm" path="res://enemies/enemy/br/aaa.sprites/d0/Image0000.tres" id="9_ntjae"]
[ext_resource type="Texture2D" uid="uid://dlg40b521wr5b" path="res://enemies/enemy/br/aaa.sprites/d0/Image0010.tres" id="10_84a1h"]
[ext_resource type="Texture2D" uid="uid://bql6uxmkwp50p" path="res://enemies/enemy/br/aaa.sprites/d0/Image0011.tres" id="11_s5kto"]
[ext_resource type="Texture2D" uid="uid://cfpaxnkacexdd" path="res://enemies/enemy/br/aaa.sprites/d0/Image0012.tres" id="12_auio8"]
[ext_resource type="Texture2D" uid="uid://c2k52rgdm3bxr" path="res://enemies/enemy/br/aaa.sprites/d0/Image0013.tres" id="13_6pce2"]
[ext_resource type="Texture2D" uid="uid://crxua0gvtt250" path="res://enemies/enemy/br/aaa.sprites/d0/Image0014.tres" id="14_h3odo"]
[ext_resource type="Texture2D" uid="uid://b2g3aneiaisy1" path="res://enemies/enemy/br/aaa.sprites/d0/Image0015.tres" id="15_qnfm5"]
[ext_resource type="Texture2D" uid="uid://bhyuqav1coijs" path="res://enemies/enemy/br/aaa.sprites/d0/Image0016.tres" id="16_ag5xn"]
[ext_resource type="Texture2D" uid="uid://yip4g2n8ijv" path="res://enemies/enemy/br/aaa.sprites/d0/Image0017.tres" id="17_0truo"]
[ext_resource type="Texture2D" uid="uid://diefpel02txya" path="res://enemies/enemy/br/aaa.sprites/d0/Image0018.tres" id="18_74nyr"]
[ext_resource type="Texture2D" uid="uid://bxxcw7wgoy3eq" path="res://enemies/enemy/br/aaa.sprites/d0/Image0019.tres" id="19_x3c46"]
[ext_resource type="Texture2D" uid="uid://bumy4fa78m2rb" path="res://enemies/enemy/br/aaa.sprites/d0/Image0020.tres" id="20_eutpd"]
[ext_resource type="Texture2D" uid="uid://cotwgn3b31bxx" path="res://enemies/enemy/br/aaa.sprites/d0/Image0021.tres" id="21_qp4a8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j6rfe"]
radius = 12.0416

[sub_resource type="Animation" id="Animation_21wr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -35)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rxcoj"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(9, -35), Vector2(9, -35)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 27.09)]
}

[sub_resource type="Animation" id="Animation_rwvx1"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_m0if7"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rlq6a"]
_data = {
"RESET": SubResource("Animation_21wr4"),
"death": SubResource("Animation_rxcoj"),
"idle": SubResource("Animation_rwvx1"),
"run": SubResource("Animation_m0if7")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_8vx38"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cenx0")
}, {
"duration": 1.0,
"texture": ExtResource("3_4to6e")
}, {
"duration": 1.0,
"texture": ExtResource("4_vix3w")
}, {
"duration": 1.0,
"texture": ExtResource("5_v7kgt")
}, {
"duration": 1.0,
"texture": ExtResource("6_2v5ts")
}, {
"duration": 1.0,
"texture": ExtResource("7_xqp7e")
}, {
"duration": 1.0,
"texture": ExtResource("8_wmwmy")
}],
"loop": false,
"name": &"death",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ntjae")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0rl5t")
}, {
"duration": 1.0,
"texture": ExtResource("3_wwuf5")
}, {
"duration": 1.0,
"texture": ExtResource("4_v7pt8")
}, {
"duration": 1.0,
"texture": ExtResource("5_g4huu")
}, {
"duration": 1.0,
"texture": ExtResource("6_83bay")
}, {
"duration": 1.0,
"texture": ExtResource("7_nel8d")
}, {
"duration": 1.0,
"texture": ExtResource("8_a1u4f")
}, {
"duration": 1.0,
"texture": ExtResource("9_7em8a")
}, {
"duration": 1.0,
"texture": ExtResource("10_84a1h")
}, {
"duration": 1.0,
"texture": ExtResource("11_s5kto")
}, {
"duration": 1.0,
"texture": ExtResource("12_auio8")
}, {
"duration": 1.0,
"texture": ExtResource("13_6pce2")
}, {
"duration": 1.0,
"texture": ExtResource("14_h3odo")
}, {
"duration": 1.0,
"texture": ExtResource("15_qnfm5")
}, {
"duration": 1.0,
"texture": ExtResource("16_ag5xn")
}, {
"duration": 1.0,
"texture": ExtResource("17_0truo")
}, {
"duration": 1.0,
"texture": ExtResource("18_74nyr")
}, {
"duration": 1.0,
"texture": ExtResource("19_x3c46")
}, {
"duration": 1.0,
"texture": ExtResource("20_eutpd")
}, {
"duration": 1.0,
"texture": ExtResource("21_qp4a8")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_2g2h8"]
filters = ["AnimatedSprite2D:animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bhk4s"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wxjik"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_edtx7"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rbsmt"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1d3cp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bhk4s")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_wxjik")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_edtx7")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_rbsmt")
blend_point_3/pos = Vector2(0, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fjmlx"]
animation = &"run"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_jkw6x"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_eaol7"]
nodes/Blend2/node = SubResource("AnimationNodeBlend2_2g2h8")
nodes/Blend2/position = Vector2(180, 300)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_1d3cp")
nodes/BlendSpace2D/position = Vector2(-200, 280)
nodes/Idle/node = SubResource("AnimationNodeAnimation_fjmlx")
nodes/Idle/position = Vector2(-120, 120)
nodes/Transition/node = SubResource("AnimationNodeTransition_jkw6x")
nodes/Transition/position = Vector2(1240, 220)
nodes/output/position = Vector2(760, 180)
node_connections = [&"Blend2", 1, &"BlendSpace2D", &"output", 0, &"Idle"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_66v6v"]

[sub_resource type="Theme" id="Theme_0ga54"]

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_6rl68")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_j6rfe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rlq6a")
}
autoplay = "run"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, -35)
sprite_frames = SubResource("SpriteFrames_8vx38")
animation = &"idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
process_mode = 4
tree_root = SubResource("AnimationNodeBlendTree_eaol7")
anim_player = NodePath("../AnimationPlayer")
parameters/current_length = 1.0
parameters/current_position = 1.0
parameters/current_delta = 0.0
parameters/Blend2/current_length = 1.0
parameters/Blend2/current_position = 1.0
parameters/Blend2/current_delta = 0.0
parameters/Blend2/blend_amount = 1.0
parameters/BlendSpace2D/current_length = 1.0
parameters/BlendSpace2D/current_position = 1.0
parameters/BlendSpace2D/current_delta = 0.0
parameters/BlendSpace2D/blend_position = Vector2(0.10432, 0.079646)
parameters/BlendSpace2D/0/current_length = 1.0
parameters/BlendSpace2D/0/current_position = 1.0
parameters/BlendSpace2D/0/current_delta = 0.0
parameters/BlendSpace2D/1/current_length = 1.0
parameters/BlendSpace2D/1/current_position = 1.0
parameters/BlendSpace2D/1/current_delta = 0.0
parameters/BlendSpace2D/2/current_length = 1.0
parameters/BlendSpace2D/2/current_position = 1.0
parameters/BlendSpace2D/2/current_delta = 0.0
parameters/BlendSpace2D/3/current_length = 1.0
parameters/BlendSpace2D/3/current_position = 1.0
parameters/BlendSpace2D/3/current_delta = 0.0
parameters/Idle/current_length = 1.0
parameters/Idle/current_position = 1.0
parameters/Idle/current_delta = 0.0
parameters/Transition/current_length = ""
parameters/Transition/current_position = ""
parameters/Transition/current_delta = ""
parameters/Transition/current_state = ""
parameters/Transition/transition_request = ""
parameters/Transition/current_index = -1
parameters/output/current_length = 1.0
parameters/output/current_position = 1.0
parameters/output/current_delta = 0.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 53.95
path_postprocessing = 1

[node name="PathFindingTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CorpseTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(137, -23)
texture = SubResource("CompressedTexture2D_66v6v")
hframes = 6
frame = 1

[node name="UI" type="Node2D" parent="."]

[node name="EntityHUD" parent="UI" instance=ExtResource("3_ykuos")]
offset_left = -13.0
offset_top = -66.0
offset_right = -13.0
offset_bottom = -66.0
theme = SubResource("Theme_0ga54")

[connection signal="timeout" from="PathFindingTimer" to="." method="_on_timer_timeout"]
